# ECOOP22-Supplementary-Material

./: .gitignore  ReadMe.md  run.py
coq/: Itemizable.v  Match.v  Static.v  Syntax.v  TSubst.v
coq/SC/: Truncate.v.d
herd/: dune
herd/herd/: CSem.ml  JavaAction.ml  JavaArch_herd.ml  JavaSem.ml  machAction.ml  mem.ml  memUtils.ml  parseTest.ml  top_herd.ml
herd/lib/: Archs.ml  CLexer.mll  JavaBase.ml  JavaGenParser_lib.ml  JavaLexer.mli  JavaLexer.mll  JavaParser.mly  JavaType.mli  accessModes.ml  dune  memOrderOrAnnot.ml  memOrderOrAnnot.mli  modelOption.ml
herd/litmus/: dumpRun.ml  option.ml  top_litmus.ml
litmus/java/litmus/: 6.SB.litmus  PPOCA.litmus
litmus/java/litmus/X86/: 4.SB.litmus  SB+mfence.litmus  SB.litmus  X005.litmus  x86-2+2W.litmus
litmus/java/litmus/aarch64/: LB.litmus
litmus/java/litmus/c11/opt-invalid/: arfna2.litmus  b_reorder.litmus  c.litmus  c_pq.litmus  c_pq_reorder.litmus  (+2 more)
litmus/ppc/litmus/: ra-non-global.4.ppc.litmus
supplement-2020/coq/: Dynamic.v  History.v  Monotonicity.v  README  Relation.v  ReleaseAcquire.v  Sequence.v  Strengthen.v  Tactics.v  Truncate.v  _CoqProject
supplement-2020/coq/SC/: Common.v  Truncate.glob  Truncate.vo  Volatile.v
supplement-2020/herd/java/: jam21.cat
supplement-2020/herd/java/litmus/: ra-non-global.5.litmus
supplement-2020/herd/ppc/litmus/: ra-non-global.5.ppc.litmus
supplement-2022/coq/: Ambients.v  Hwf.v  PreSyntax.v  Subst.v  TSubstGeneral.v  TermDec.v  TraverseTactics.v  Unique.v
supplement-2022/coq/SC/: DRF.v
supplement-2022/herd/java/litmus/: ra-non-global.4.litmus
(+61 files in other folders)
